release 0.0.2
